deploy/k8s/service-backend-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: okr-backend-api
  namespace: okr
spec:
  selector:
    app: okr-backend-api
  ports:
    - name: http
      port: 8100
      targetPort: 8100
  type: ClusterIP
